# bs

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
cli/: Cargo.toml  test.plog
cli/src/: cmds.rs  config.rs  error.rs  fs.rs  keychain.rs  lib.rs  local_file.rs  repl.rs  ssh_agent.rs
cli/src/commands/: mod.rs  wasm.rs
cli/src/commands/key/: command.rs  error.rs  gen.rs  mod.rs
cli/src/ops/: mod.rs
cli/src/ops/open/: config.rs
cli/src/ops/update/: config.rs  op.rs
cli/src/subcmds/: config.rs  mod.rs  plog.rs
cli/src/subcmds/config/: command.rs
cli/src/subcmds/plog/: command.rs  mod.rs
crates/bs/: Cargo.toml
crates/bs-p2p/: Cargo.toml  README.md  justfile
crates/bs-p2p/src/: behaviour.rs  error.rs  events.rs  lib.rs  swarm.rs
crates/bs-p2p/src/behaviour/: req_res.rs
crates/bs-p2p/src/events/: api.rs  delay.rs  timeout.rs
crates/bs-p2p/src/swarm/: config.rs
crates/bs-peer/: Cargo.toml  README.md  justfile  local_keypair
crates/bs-peer/.cargo/: config.toml
crates/bs-peer/src/: bindgen.rs  config.rs  error.rs  lib.rs  peer.rs  platform.rs  test_utils.rs  utils.rs
crates/bs-peer/src/config/: open.rs
crates/bs-peer/src/platform/: browser.rs  common.rs  native.rs
crates/bs-peer/src/platform/browser/: crypto.rs  error.rs  opfs.rs
crates/bs-peer/src/platform/native/: crypto.rs  error.rs  native_blockstore.rs
crates/bs-peer/tests/: web.rs
crates/bs-server/: Cargo.toml  README.md  justfile
crates/bs-server/.cargo/: config.toml
crates/bs-server/src/: main.rs
crates/bs-traits/: Cargo.toml  README.md
crates/bs-traits/src/: async.rs  asyncro.rs  cond_send.rs  error.rs  lib.rs  sync.rs  wait_queue.rs
crates/bs-wallets/: Cargo.toml  README.md
crates/bs-wallets/src/: async_memory.rs  error.rs  lib.rs  memory.rs
crates/bs/src/: better_sign.rs  config.rs  error.rs  lib.rs  ops.rs  resolver_ext.rs
crates/bs/src/config/: adapters.rs  asynchronous.rs  sync.rs
crates/bs/src/ops/: open.rs  params.rs  update.rs
crates/bs/src/ops/open/: config.rs  mod.rs
crates/bs/src/ops/params/: anykey.rs  entry_key.rs  pubkey.rs  vlad.rs
crates/bs/src/ops/update/: config.rs  mod.rs  op.rs  op_params.rs  script.rs
crates/bs/wat/: README.md  lock.wat  unlock.wat  wontcompile.wat
crates/bsp2p/: Cargo.toml
crates/comrade/: Cargo.toml  README.md  justfile
crates/comrade-component/: Cargo.toml  README.md  justfile
crates/comrade-component/src/: bindings.rs  kv.rs  lib.rs  logger.rs  random.rs
crates/comrade-component/wit/: world.wit
crates/comrade-crypto/: Cargo.toml  README.md
crates/comrade-crypto/src/: context.rs  lib.rs
crates/comrade-crypto/src/context/: value.rs
crates/comrade-reference/: Cargo.toml  README.md
crates/comrade-reference/src/: context.rs  error.rs  lib.rs
crates/comrade-reference/src/context/: pairs.rs  parser.rs  stack.rs
crates/comrade/src/: api.rs  core.rs  error.rs  lib.rs  random.rs  runtime.rs  vm.rs
crates/comrade/src/runtime/: mod.rs
crates/comrade/src/runtime/direct/: logs.rs  mod.rs
crates/comrade/src/runtime/layer/: definitions.rs  mod.rs
crates/comrade/tests/: mod.rs  web.rs
crates/content-addressable/: Cargo.toml  README.md
crates/content-addressable/src/: block.rs  blocks.rs  cids.rs  error.rs  fs.rs  lib.rs
crates/content-addressable/src/fs/: block.rs  blocks.rs  cidmap.rs  error.rs  mkmap.rs  storage.rs  vladmap.rs
crates/interop-tests/: Cargo.toml  README.md
crates/interop-tests/src/: lib.rs
crates/multibase/: Cargo.toml
crates/multibase/src/: base.rs  impls.rs  lib.rs
crates/multibase/tests/: lib.rs
crates/multicid/: Cargo.toml
crates/multicid/src/: cid.rs  error.rs  serde.rs  vlad.rs
crates/multicodec/: Cargo.toml  build.rs  table.csv
crates/multicodec/src/: codec.rs  serde.rs  table_gen.rs
crates/multicodec/src/serde/: de.rs
crates/multihash/: Cargo.toml
crates/multihash/src/: lib.rs  mh.rs  serde.rs
crates/multikey/: Cargo.toml  README.md  justfile
crates/multikey/src/: cipher.rs  error.rs  kdf.rs  mk.rs  nonce.rs  serde.rs  views.rs
crates/multikey/src/serde/: de.rs  mod.rs
crates/multikey/src/views/: bcrypt.rs  bls12381.rs  chacha20.rs  ed25519.rs  mlkem.rs  p256.rs  secp256k1.rs
crates/multikey/tests/: p256_verification.rs  web.rs
crates/multisig/: Cargo.toml
crates/multisig/src/: error.rs  lib.rs  ms.rs  views.rs
crates/multisig/src/serde/: de.rs  mod.rs
crates/multisig/src/views/: bls12381.rs  p256.rs
crates/multitrait/: Cargo.toml
crates/multitrait/src/: lib.rs  null.rs
crates/multiutil/: Cargo.toml
crates/multiutil/benches/: varbytes.rs
crates/multiutil/src/: base_encoded.rs  base_encoder.rs  base_util.rs  lib.rs  serde.rs  varbytes.rs  varuint.rs
crates/multiutil/src/serde/: de.rs  ser.rs
crates/provenance-log/: Cargo.toml
crates/provenance-log/src/: entry.rs  error.rs  key.rs  lib.rs  lipmaa.rs  log.rs  op.rs  pairs.rs  resolver.rs  script.rs  serde.rs  stack.rs  value.rs
crates/provenance-log/src/entry/: fields.rs
crates/provenance-log/src/key/: key_paths.rs  util.rs
crates/provenance-log/src/serde/de/: key.rs  log.rs  script.rs
crates/rng/: Cargo.toml
crates/rng/src/: lib.rs
crates/wacc/: Cargo.toml  build.rs
crates/wacc/examples/wast/: branch.wasm  fork_lock.wasm  fork_unlock.wasm  invalid_utf8.wasm  lock.wasm  log.wasm  preimage_lock.wasm  pubkeysig_lock.wasm  unlock.wasm
crates/wacc/src/: api.rs
crates/wacc/src/api/: branch.rs  check_eq.rs  check_preimage.rs  check_signature.rs  log.rs  push.rs
crates/wacc/src/storage/: stack.rs
crates/wacc/src/vm/: builder.rs  compiler.rs  context.rs  instance.rs  value.rs
crates/wacc/tests/: branch.rs  forklock.rs  lock.rs  log.rs  preimage.rs  pubkeysig.rs  unlock.rs
docs/: ARCHITECTURE.md
src/: blocks.rs  commands.rs  config.rs  error.rs  fs.rs  keychain.rs  lib.rs  local_file.rs  ssh_agent.rs
src/commands/: key.rs  keygen.rs  plog.rs  vlad.rs  vladgen.rs  wasm.rs
src/ops/open/: config.rs  mod.rs
src/ops/update/: config.rs  mod.rs  op_params.rs  script.rs
wat/: first.wat  lock.wat  unlock.wat
(+1 files in other folders)
