[workspace]
resolver = "2"
default-members = ["crates/bs"]
members = [
  "crates/*",
  "cli",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Dave Grantham <dwg@linuxprogrammer.org>"]
description = "The BetterSign Provenance-Based Identity Solution"
readme = "README.md"
license = "FSL-1.1 OR Apache-2.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(feature, values("cargo-clippy"))',
  'cfg(fuzzing)',
]}

[workspace.dependencies]
# Crate ependencies
bs = { path = "crates/bs" }
multibase = { path = "crates/multibase" }
multicid = { path = "crates/multicid" }
multicodec = { path = "crates/multicodec" }
multihash = { path = "crates/multihash" }
multikey = { path = "crates/multikey" }
multisig = { path = "crates/multisig" }
multitrait = { path = "crates/multitrait" }
multiutil = { path = "crates/multiutil" }
provenance-log = { path = "crates/provenance-log" }
rng = { path = "crates/rng" }
wacc = { path = "crates/wacc" }

# Core dependencies
best-practices = { version = "0.1.0", git = "https://github.com/cryptidtech/best-practices.git" }
criterion = "0.5.1"
elliptic-curve = "0.13.8"
hex = "0.4.3"
rand = { version = "0.9.0", features = ["os_rng"] }
rand_core = "0.9.3"
rand_6 = { version = "0.6.4", package = "rand" }
rand_core_6 = { version = "0.6.4", package = "rand_core" }
serde = { version = "1.0.219", default-features = false, features = ["alloc", "derive"]}
serde_cbor = { version = "0.11.2", features = ["tags"]}
serde_json = { version = "1.0.104"}
serde_test = { version = "1.0.104"}
test-log = { version = "0.2.17", features = ["trace", "color"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
unsigned-varint = { version = "0.8.0", features = ["std"] }

[profile.bench]
opt-level = 3
debug = false
