[package]
name = "bs-cli"
version.workspace = true
edition.workspace = true
authors = ["Dave Grantham <dwg@linuxprogrammer.org>"]
description = "BetterSign Provenance-Identity Tool"
readme = "README.md"
keywords = ["signing", "provenance logs", "decentralized identity"]
license = "Functional Source License 1.1"

[[bin]]
name = "bs"
path = "src/bin/bs.rs"

[features]
default = ["serde"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
best-practices.workspace = true
bs.workspace = true
clap = { version = "4.5.36", features = ["cargo"] }
directories = "6.0.0"
ed25519-dalek = "2.1.1"
elliptic-curve.workspace = true
multibase.workspace = true
multicid.workspace = true
multicodec.workspace = true
multihash.workspace = true
multikey.workspace = true
multisig.workspace = true
multitrait.workspace = true
multiutil.workspace = true
provenance-log.workspace = true
rand.workspace = true
rand_core_6.workspace = true
rng.workspace = true
serde = { workspace = true, optional = true }
serde_cbor.workspace = true
serde_json.workspace = true
ssh-key = { version = "0.6.2", features = ["crypto", "ed25519"]}
ssh-agent-client-rs = "1.0.0"
structopt = "0.3.26"
thiserror.workspace = true
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
tracing.workspace = true
tracing-subscriber.workspace = true
wacc.workspace = true

[dev-dependencies]
tokio-test = "0.4.4"
