[package]
name = "bs-p2p"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The BetterSign p2p networking layer"
readme = "README.md"
license = "Apache 2.0"

[dependencies]
serde.workspace = true
thiserror.workspace = true
rand = "0.8"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
web-time = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
libp2p = { workspace = true, features = [
  "ed25519",
  "macros",
  "ping",
  "wasm-bindgen",
  "gossipsub",
  "identify",
  "kad",
  "request-response",
  "cbor",
  "relay",
  "noise",
  "yamux",
  "websocket-websys",
  "dcutr",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libp2p = { workspace = true, features = [
  "ed25519",
  "macros",
  "ping",
  "quic",
  "tokio",
  "gossipsub",
  "identify",
  "kad",
  "request-response",
  "cbor",
  "relay",
  "noise",
  "yamux",
  "dcutr",
  "dns",
  "websocket",
  "tcp",
  "rsa",
] }
libp2p-webrtc = { version = "0.8.0-alpha", features = ["tokio", "pem"] }
zeroize = "1.8.1"
serde_json = "1.0"

[lints]
workspace = true
