[package]
name = "bs-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
bs-peer.workspace = true
bs-p2p.workspace = true
anyhow = "1.0"
directories = "6.0"
futures = "0.3"
libp2p.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true, features = ["full", "signal"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
axum = "0.8"

[lints]
workspace = true
