[package]
name = "bs-traits"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme = "README.md"
license = "Functional Source License 1.1"

[dependencies]
thiserror.workspace = true

[dev-dependencies]
futures = "0.3"
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true

[features]
default = ["dyn-compatible"]
dyn-compatible = []
