[package]
name = "bs-wallets"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
bs.workspace = true
bs-traits.workspace = true
multibase.workspace = true
multicodec.workspace = true
multikey.workspace = true
multihash.workspace = true
multicid.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true
rand_core_6.workspace = true

[dev-dependencies]
tokio.workspace = true
bs-peer.workspace = true

[lints]
workspace = true
