[package]
name = "bs-wallets"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
bs-traits.workspace = true
futures = { workspace = true, optional = true }
multibase.workspace = true
multicodec.workspace = true
multikey.workspace = true
multihash.workspace = true
multicid.workspace = true
multiutil.workspace = true
multisig.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true
rand_core_6.workspace = true
provenance-log.workspace = true

[dev-dependencies]
tokio.workspace = true
bs.workspace = true
bs-peer.workspace = true
tracing-subscriber.workspace = true

[features]
sync = ["dep:futures"]

[lints]
workspace = true
