[package]
name = "bs"
version.workspace = true
edition.workspace = true
authors = ["Dave Grantham <dwg@linuxprogrammer.org>"]
description = "The BetterSign provenance-based identity system"
readme = "README.md"
license = "Functional Source License 1.1"

[dependencies]
bs-traits.workspace = true
bs-wallets = { workspace = true, features = ["sync"] }
best-practices.workspace = true
comrade.workspace = true
futures = { workspace = true, optional = true }
multicid.workspace = true
multicodec.workspace = true
multihash.workspace = true
multikey.workspace = true
multisig.workspace = true
multiutil.workspace = true
provenance-log.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true, optional = true }
bon = "3.6.3"

[dev-dependencies]
tracing-subscriber.workspace = true
bs-wallets = { workspace = true, features = ["sync"] }
multibase.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true

[features]
default = ["sync"]
serde = ["dep:serde"]
sync = ["dep:futures", "bs-wallets/sync"]
