[package]
name = "comrade-component"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license = "MIT"

[dependencies]
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:comrade-component"

[package.metadata.component.dependencies]
