[package]
name = "comrade"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
comrade-reference.workspace = true
thiserror = "2.0"

[features]
default = ["core"]
# enable core features when you want to build a wasm component
core = []

[lints]
workspace = true
