[package]
name = "comrade"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
comrade-reference.workspace = true
thiserror = "2.0"
# wasm_component_layer gives us an isomorphic way to load components
# in native or the browser directly from Rust
# patch until thos lands: https://github.com/DouglasDwyer/wasm_component_layer/pull/26
wasm_component_layer = { git = "https://github.com/DougAnderson444/wasm_component_layer.git", branch = "dep-fix", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmi_runtime_layer = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js_wasm_runtime_layer = "0.4.0"

[features]
default = ["wasm_component_layer"]

[lints]
workspace = true
