[package]
name = "multicodec"
version.workspace = true
edition.workspace = true
authors = ["Benjamin Kampmann <ben@gnunicorn.org>", "Dave Grantham <dwg@linuxprogrammer.org>"]
description = "Implementation of the Multicodec specification"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["multiformats", "multicodec", "serde"]

[features]
default = ["serde"]

[dependencies]
multitrait.workspace = true
serde = { workspace = true, optional = true }
test-log.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_cbor.workspace = true
serde_json.workspace = true
serde_test.workspace = true

[build-dependencies]
convert_case = "0.8.0"
csv = "1.3.1"
serde.workspace = true

[lints]
workspace = true
