[package]
name = "multikey"
version.workspace = true
edition.workspace = true
authors = ["Dave Grantham <dwg@linuxprogrammer.org>"]
description = "Multikey self-describing cryptographic key data"
readme = "README.md"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["serde"]
wasm = ["getrandom/wasm_js"] # needed for CI testing on wasm32-unknown-unknown

[dependencies]
bcrypt-pbkdf = "0.10"
blsful = "2.5"
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
elliptic-curve.workspace = true
hex.workspace = true
k256 = "0.13"
p256 = { version = "0.13", default-features = false, features = [
  "ecdsa",
  "arithmetic",
] }
ml-kem = { version = "0.2.1", features = ["deterministic"] }
multibase.workspace = true
multicodec.workspace = true
multihash.workspace = true
multisig.workspace = true
multitrait.workspace = true
multiutil.workspace = true
rand.workspace = true
rand_core_6.workspace = true
rng.workspace = true
sec1 = "0.7"
serde = { workspace = true, optional = true }
sha3.workspace = true
ssh-encoding = { version = "0.2" }
test-log.workspace = true
thiserror.workspace = true
tracing.workspace = true
typenum = "1.17"
unsigned-varint.workspace = true
vsss-rs = "4.3.8"
zeroize = "1.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
ssh-key = { version = "0.6", default-features = false, features = [
  "alloc",
  "ecdsa",
  "ed25519",
  "p256",
] }
getrandom = { version = "0.3", features = ["wasm_js"] }
# We have netsed deps that use v0.2, so we need to ensure the feature is flagged here
getrandom_v02 = { package = "getrandom", version = "0.2.15", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ssh-key = { version = "0.6", features = ["alloc", "crypto", "ed25519"] }

[dev-dependencies]
serde_cbor.workspace = true
serde_json.workspace = true
serde_test.workspace = true
wasm-bindgen-test = "0.3"

[lints]
workspace = true
