[package]
name = "rng"
version.workspace = true
edition.workspace = true
authors = ["Dave Grantham <dwg@linuxprogrammer.org>"]
description = "`rand` and `rand_core` abstraction for `elliptic-curve`"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
rand.workspace = true
rand_core.workspace = true
rand_6.workspace = true
rand_core_6.workspace = true

[lints]
workspace = true
