[package]
name = "wacc"
version.workspace = true
edition.workspace = true
authors = ["Dave Grantham <dwg@linuxprogrammer.org>"]
description = "Web assembly cryptographic constructs VM implementation"
readme = "README.md"
license = "Functional Source License 1.1"

[dependencies]
multicid.workspace = true
multihash.workspace = true
multikey.workspace = true
multisig.workspace = true
multitrait.workspace = true
multiutil.workspace = true
test-log.workspace = true
thiserror.workspace = true
tracing.workspace = true
wasmtime = "31.0.0"

[dev-dependencies]
hex.workspace = true

[lints]
workspace = true
